@@ -27,6 +27,9 @@ $ -> Language fix or change
 
 ; Below is merged into v3.1.3
 
+25-Jul-2013 Michael Babker
+ # [#31550] SQL error if profiling not available/not activated in mysql (3.1.2 pre release).  Thanks Beat
+
 24-Jul-2013 Jean-Marie Simonet
  # [#31548] Toolbar: Different version of CSS vs LESS files + mobile resolution fixes. Thanks Roberto Segura
 
